// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BouncePage:  should display loading panel on top level metrics when aggregates are loading 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
    shareDisabled={true}
  />
  <PanelLoading
    minHeight="115px"
  />
  <Connect(ChartGroup) />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <TableCollection
      columns={
        Array [
          Object {
            "label": "Reason",
            "sortKey": "reason",
            "width": "45%",
          },
          Object {
            "label": "Domain",
            "sortKey": "domain",
          },
          Object {
            "label": "Category",
            "sortKey": "bounce_category_name",
          },
          Object {
            "label": "Classification",
            "sortKey": "classification_id",
          },
          Object {
            "label": "Count (%)",
            "sortKey": "count_bounce",
          },
        ]
      }
      getRowData={[Function]}
      onSort={[Function]}
      pagination={true}
      rows={
        Array [
          Object {
            "bounce_category_name": "Block",
            "bounce_class_description": "The message was blocked by the receiver as coming from a known spam source",
            "bounce_class_name": "Spam Block",
            "classification_id": 51,
            "count_bounce": 5,
            "domain": "yahoo.com",
            "reason": "554 - 5.7.1 Blacklisted by 'twoomail.com'(twoo.com.multi.surbl.org) Contact the postmaster of this domain for resolution. This attempt has been logged.",
          },
        ]
      }
      sortColumn="count"
      sortDirection="desc"
    />
  </Panel>
  <ShareModal
    handleToggle={[Function]}
    open={false}
    query={Array []}
  />
</Page>
`;

exports[`BouncePage:  should render 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
  />
  <MetricsSummary
    rateTitle="Bounce Rate"
    rateValue={10}
    relativeRange="hour"
  >
    <strong>
      1
    </strong>
     of your messages were bounced of 
    <strong>
      10
    </strong>
     messages targeted
  </MetricsSummary>
  <Connect(ChartGroup) />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <TableCollection
      columns={
        Array [
          Object {
            "label": "Reason",
            "sortKey": "reason",
            "width": "45%",
          },
          Object {
            "label": "Domain",
            "sortKey": "domain",
          },
          Object {
            "label": "Category",
            "sortKey": "bounce_category_name",
          },
          Object {
            "label": "Classification",
            "sortKey": "classification_id",
          },
          Object {
            "label": "Count (%)",
            "sortKey": "count_bounce",
          },
        ]
      }
      getRowData={[Function]}
      onSort={[Function]}
      pagination={true}
      rows={
        Array [
          Object {
            "bounce_category_name": "Block",
            "bounce_class_description": "The message was blocked by the receiver as coming from a known spam source",
            "bounce_class_name": "Spam Block",
            "classification_id": 51,
            "count_bounce": 5,
            "domain": "yahoo.com",
            "reason": "554 - 5.7.1 Blacklisted by 'twoomail.com'(twoo.com.multi.surbl.org) Contact the postmaster of this domain for resolution. This attempt has been logged.",
          },
        ]
      }
      sortColumn="count"
      sortDirection="desc"
    />
  </Panel>
  <ShareModal
    handleToggle={[Function]}
    open={false}
    query={Object {}}
  />
</Page>
`;

exports[`BouncePage:  should render correctly with no bounces 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
  />
  <Empty
    message="No bounces to report"
    title="Bounce Rates"
  />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <TableCollection
      columns={
        Array [
          Object {
            "label": "Reason",
            "width": "45%",
          },
          "Domain",
          "Category",
          "Classification",
          "Count (%)",
        ]
      }
      getRowData={[Function]}
      pagination={true}
      rows={
        Array [
          Object {
            "bounce_category_name": "Block",
            "bounce_class_description": "The message was blocked by the receiver as coming from a known spam source",
            "bounce_class_name": "Spam Block",
            "classification_id": 51,
            "count_bounce": 5,
            "domain": "yahoo.com",
            "reason": "554 - 5.7.1 Blacklisted by 'twoomail.com'(twoo.com.multi.surbl.org) Contact the postmaster of this domain for resolution. This attempt has been logged.",
          },
        ]
      }
    />
  </Panel>
  <ShareModal
    handleToggle={[Function]}
    open={false}
    query={Array []}
  />
</Page>
`;

exports[`BouncePage:  should render row data properly 1`] = `
Array [
  <LongTextContainer
    text="u y bounce?"
  >
    <div>
      u y bounce?
    </div>
  </LongTextContainer>,
  <UnstyledLink
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      gmail
    </a>
  </UnstyledLink>,
  "bouncy",
  undefined,
  <span>
    10
    (
    <Percent
      value={10}
    >
      10%
    </Percent>
    )
  </span>,
]
`;

exports[`BouncePage:  should show empty reasons table when there are no reasons 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
  />
  <MetricsSummary
    rateTitle="Bounce Rate"
    rateValue={10}
    relativeRange="hour"
  >
    <strong>
      1
    </strong>
     of your messages were bounced of 
    <strong>
      10
    </strong>
     messages targeted
  </MetricsSummary>
  <Connect(ChartGroup) />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <Empty
      message="No bounce reasons to report"
      title="Bounced Messages"
    />
  </Panel>
  <ShareModal
    handleToggle={[Function]}
    open={false}
    query={Array []}
  />
</Page>
`;

exports[`BouncePage:  should show loading panel when table is loading 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <Connect(Filters)
    onShare={[Function]}
    refresh={[Function]}
  />
  <MetricsSummary
    rateTitle="Bounce Rate"
    rateValue={10}
    relativeRange="hour"
  >
    <strong>
      1
    </strong>
     of your messages were bounced of 
    <strong>
      10
    </strong>
     messages targeted
  </MetricsSummary>
  <Connect(ChartGroup) />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <PanelLoading
      minHeight="400px"
    />
  </Panel>
  <ShareModal
    handleToggle={[Function]}
    open={false}
    query={Array []}
  />
</Page>
`;
